# advent-of-code

./: README.md  go.mod  main.go
helpers/: helpers.go
python/py-aoc/: README.md  pyproject.toml
python/py-aoc/py_aoc/: helpers.py
python/py-aoc/py_aoc/solutions/2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
python/py-aoc/py_aoc/solutions/2024/: day1.py  day2.py
year2015/: 1.go  1_test.go  2.go  2_test.go  main.go
year2021/: 1.go  1_test.go  2.go  2_test.go  3.go  3_test.go  4.go  4_test.go  5.go  5_test.go  6.go  6_test.go  7.go  7_test.go  8.go  8_test.go  9.go  9_test.go  main.go
years/2015/: 1.go  1_test.go
