[tool.poetry]
name = "py-aoc"
version = "0.1.0"
description = ""
authors = ["Jon Schwartz <jon.schwartz@leaflink.com>"]
readme = "README.md"
packages = [{include = "py_aoc"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
